--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -8,51 +8,44 @@ div.fancy-select select:active + div.trigger {
 
 
 div.fancy-select select:focus + div.trigger {
-	box-shadow: none;//0 0 0 2px #4B5468;
-
-	//.button-click-animation(button_color_change_affirmative);
-}
-//.keyframes(button_color_change_affirmative, @complimentary_colour, @complimentary_colour_light, @complimentary_colour_dark);
-
-
-div.fancy-select div.trigger {
-	background: @complimentary_colour;//#99A5BE;
-	//border: 1px solid #99A5BE;
-	//border-top-color: #A5B2CB;
-	border: none;
-	color: @white;//#4B5468;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 	box-shadow: none;
 }
+
+div.fancy-select div.trigger {
+	background: @primary_colour;
+	border: none;
+	color: @black;
+	font-weight: normal;
+	.box-shadow(0 1px 2px rgba(0, 0, 0, 0.2));
+}
 div.fancy-select div.trigger:after {
-	border-top-color: @white;//none;//#4B5468;
+	border-top-color: @primary_colour_dark;
 	top: 15px;
-	color: @white;
+	color: @primary_colour_dark;
 }
 
 div.fancy-select div.trigger.open {
-	background: @complimentary_colour_dark;//#4A5368;
-	border: none;//1px solid #475062;
-	color: @white;//#7A8498;
+	background: @primary_colour_dark;
+	border: none;
+	color: @white;
 	box-shadow: none;
 }
 
 div.fancy-select div.trigger.open:after {
-	border-top-color: @white;//none;//#7A8498;
+	border-top-color: @white;
 }
 
 div.fancy-select ul.options {
-	background: @supplementary_colour_light;//#62C8BF;
+	background: @primary_colour;
 	border-radius: 4px;
-	border-top: none;//1px solid #7DD8D2;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+	border-top: none;
+	.box-shadow(0 1px 2px rgba(0, 0, 0, 0.2));
 	.paperShadow;
 }
 
 div.fancy-select ul.options,
 div.fancy-select ul.options.open {
 	top: 36px;
-	//padding-left: 5px;
 }
 
 div.fancy-select ul.options.overflowing,
@@ -62,39 +55,37 @@ div.fancy-select ul.options.open.overflowing {
 }
 
 div.fancy-select ul.options li {
-	//color: #2B8686;
 	color: @black;
 	padding-left: 10px;
+	list-style: none;
+	font-weight: normal;
 }
 
 div.fancy-select ul.options ul {
-	list-style-type: square;
 	list-style-position: outside;
 	list-style-image: none;
 }
 div.fancy-select ul.options h2 {
-	color: @primary_colour;
-	margin: 0px;
+	color: @black;
+	margin-top: 20px;
 	margin-left: 10px;
-	font-size: 16px;
-	line-height: 16px;
 	font-weight: normal;
-
+	.small;
 }
 div.fancy-select ul.options ul li {
-	list-style-type: square;
 	padding-left: 25px;
+	list-style-type: none;
 	list-style-position: inside;
 	list-style-image: none;
 }
 
 
 div.fancy-select ul.options li.selected {
-	background: @complimentary_colour_light;//@supplementary_colour_dark;//rgba(43,134,134,0.3);
-	color: @complimentary_colour_dark;//rgba(255,255,255,0.75);
+	background: @primary_colour_light;
+	color: @secondary_colour_dark;
 }
 
 div.fancy-select ul.options li.hover {
-	background: @complimentary_colour_light;//@supplementary_colour_dark;//rgba(43,134,134,0.3);
-	color: @complimentary_colour_dark;//rgba(255,255,255,0.75);
+	background: @primary_colour_light;
+	color: @primary_colour_dark;
 }
