--- a/src/styles/headers.less
+++ b/src/styles/headers.less
@@ -1,9 +1,14 @@
 .list_header {
-	padding: 3px;
-	padding-left: 5px;
-	padding-right: 5px;
-	background-color: @black;
-	color: @white;
+	display: inline-block;
+	min-height: 50px;
+	width: 100%;
+	padding: 5px;
+	background-color: @primary_colour_light;
+	color: @primary_colour_dark;
+	border-top: 1px solid @primary_colour_dark;
+	border-bottom: 1px solid @primary_colour_dark;
+	text-transform: uppercase;
+
 	.float_right {
 		float: right;
 	}
