--- a/src/styles/main-nav.less
+++ b/src/styles/main-nav.less
@@ -4,69 +4,53 @@
 	@local_primary_colour_dark: @primary_colour_dark;
 	@local_supplementary_colour: @supplementary_colour;
 
-
 	@local_feature_colour_light: @feature_colour_light;
 	@local_feature_colour_dark: @feature_colour_dark;
 	@local_feature_colour: @feature_colour;
 
-	@local_white: @white;
-
-
 	width: 250px;
-	padding-top: 1px;
-	background-color: @local_primary_colour_light;
+	background-color: @local_primary_colour;
+
 	li {
-		border-bottom: solid 1px @local_primary_colour_dark;
+		color: @white;
+		display: block;
+		width: 100%;
+		height: 100%;
+		line-height: 3.6em;
 	}
-	li a:hover {
-		//background-color: @local_primary_colour;
-	}
-	li:last-of-type {
-		border-bottom: none;
-	}
+
 	li a {
-		display: block;
-		width: 100%;
-		height: 100%;
-		cursor: pointer;
-		padding: 5px;
-		padding-left: 15px;
+		margin: 0px 15px;
+		padding-bottom: 5px;
 
-	}
-	li .no-link {
-		display: block;
-		width: 100%;
-		height: 100%;
-		padding: 5px;
-		padding-left: 15px;
-	}
-	li h3 {
-		padding-top: 30px;
-		margin-bottom: 10px;
-	}
-	li ul li {
-		&:last-of-type {
-			padding-bottom: 0px;
-		}
-	}
-	.accountInfo {
-		color: @local_white;
-		background-color: @local_primary_colour_dark;
-		padding: 5px;
-		padding-left: 15px;
-
-		.userBalance {
-			color: @local_supplementary_colour;
+		&:hover, &.active {
+			border-bottom: 3px solid @local_feature_colour;
 		}
 	}
 
-	li a.active {
+	.ribbon {
+		color: @white;
 		background-color: @local_feature_colour;
-		color: @local_white;
+		padding: 15px;
+		line-height: 1.4em;
+
+		div { padding-bottom: 5px; }
+
+		.ribbonText {}
+		.ribbonValue {
+			font-weight: bold;
+			margin-left: 10px;
+		}
 	}
-	li a:active {
-		.list-item-click-animation(main_nav_color_change_default);
-		.paperShadow-inset;
+
+	.buttonPadding {
+		width: 100%;
+		margin-top: 10px;
 	}
-	.button-click-keyframes(main_nav_color_change_default, @local_primary_colour_light, @local_feature_colour, @local_feature_colour_light);//@local_feature_colour_dark);
+
+	.navSeparator {
+		width: 85%;
+		margin-left: 15px;
+		border-bottom: 2px solid @local_primary_colour_dark;
+	}
 }
