--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -23,6 +23,7 @@
 @import 'notify';
 @import 'modal';
 @import 'ticket';
+@import 'tabs';
 
 * {
 	box-sizing:border-box;
@@ -32,16 +33,11 @@
 [class^="introjs"] {
 	box-sizing: content-box;
 }
-h1, h2, h3, h4, h5, h6 {
-	font-family:'HelveticaNeueBdCn';
+
+.center {
+	text-align: center;
 }
-h1 { font-size: 2em; }
-h2 { font-size: 1.6em; }
-h3 { font-size: 1.3em; }
-h4 { font-size: 1.1em; }
-h5 { font-size: 1em;  }
-h6 { font-size: .9em; }
-.center {text-align: center;}
+
 .body_content_wrap {
 	margin-left: auto;
 	margin-right: auto;
@@ -49,6 +45,15 @@ h6 { font-size: .9em; }
 	max-width: 720px;
 }
 
+a {
+	text-decoration: none;
+	cursor: pointer;
+	color: @black;
+	&:visited, &:hover, &:active {
+		text-decoration: none;
+		color: @black;
+	}
+}
 .help_button {
 	border: solid 1px white;
 	-webkit-box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.75);
@@ -72,17 +77,7 @@ h6 { font-size: .9em; }
 }
 .colour-table .row_header { text-align: left;}
 .colour-table th { overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
-/*
-.colour-table tr td:nth-of-type(1){ width: 12%; }
-.colour-table tr td:nth-of-type(2){ width: 5%;  }
-.colour-table tr td:nth-of-type(3){ width: 32%; }
-.colour-table tr td:nth-of-type(4){ width: 25%; }
-.colour-table tr td:nth-of-type(5){ width: 7%;  }
-.colour-table tr td:nth-of-type(6){ width: 4%;  }
-*/
-.colour-table tr td { width: 25%; }
-.black.colour_swatch, .white.colour_swatch { width: 25%; margin-left: auto; margin-right: auto;}
-.white.colour_swatch {color: @black;}
+.colour-table tr td { width: 20%; }
 
 .module {
 	position:relative;
@@ -102,8 +97,8 @@ h6 { font-size: .9em; }
 .module > h2.center { text-align: center; margin-bottom: 10px; }
 //.module > h3 { margin-bottom: 15px; margin-top: 15px;}
 .module .example .title { border-bottom: inset 1px gray; margin-bottom: 15px;  padding-left: 10px;}
-.module .example { 
-	box-sizing: border-box; 
+.module .example {
+	box-sizing: border-box;
 	border-radius: 5px;
 	padding: 10px;
 	border-radius: 5px;
