--- a/src/styles/ticket.less
+++ b/src/styles/ticket.less
@@ -1,10 +1,34 @@
+.ticketWrap {
+	background-color: rgba(61,61,61,0.75);
+	opacity: 0;
+	&.open {
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: auto;
+		width: auto;
+		bottom: 0;
+		right: 0;
+		overflow-y: scroll;
+		opacity: 1;
+		.translate3d(0, 0, 0);
+		.transition(opacity 200ms linear);
+	}
+}
 .ticket {
 	margin-left: auto;
 	margin-right: auto;
 	width: 320px;
+	background-color: @white;
 	&.bet .selectionDetails {
 		float: none;
 	}
+	/*
+	&.bet {
+		border-bottom: none;
+	}
+	*/
+
 	.calc {
 		margin-top: 5px;
 		button {
@@ -21,5 +45,51 @@
 			width: 98%;
 			margin: 1%;
 		}
+	}
+
+	.selectionName {
+		margin-top: 10px;
+	}
+
+
+	.placementDetails {
+		margin: 0px;
+
+		.success {
+			background-color: @complimentary_colour_light;
+		}
+		.partial {
+			background-color: @supplementary_colour_light;
+		}
+	}
+
+	.smallNote {
+		font-size: 0.6em;
+		float: right;
+		margin: 5px;
+	}
+
+	.flexiOptions {
+		padding: 5px;
+
+		.icheckLabel {
+			position:relative;
+			top: -20px;
+			margin-left: 30px;
+		}
+	}
+
+	.ticketLoading {
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		opacity: 0.7;
+		background-color: @black;
+		z-index: 10;
+
+		.translate3d(0, 0, 0);
+		.transition(opacity 200ms linear);
 	}
 }
